// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Creates IDE Integration files 1`] = `
{
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
Written prettier.config.mjs
Written stylelint.config.mjs
",
}
`;

exports[`Creates IDE Integration files 2`] = `
"// AUTOGENERATED BY CRAFTY - DO NOT EDIT
// This file helps IDEs autoconfigure themselves
// any change here will only be used by your IDE, not by Crafty

/* global process */
import { initialize } from "@swissquote/crafty";

const crafty = await initialize(process.argv);

const config = crafty.config.legacy_css
  ? crafty.config.stylelint_legacy
  : crafty.config.stylelint;
export default config;
"
`;

exports[`Creates IDE Integration files 3`] = `
"// AUTOGENERATED BY CRAFTY - DO NOT EDIT
// This file helps IDEs autoconfigure themselves
// any change here will only be used by your IDE, not by Crafty

/* global process */
import { initialize } from "@swissquote/crafty";

const crafty = await initialize(process.argv);

const config = crafty.config.prettier;
export default config;
"
`;

exports[`Lints with the command 1`] = `
{
  "status": 2,
  "stdall": "
[__:__:__] Starting Crafty __version__...

css/imported.scss
  1:1  ✖  Types are allowed only inside a scope  swissquote/no-type-outside-scope

css/style.scss
   4:1   ✖  Types are allowed only inside a scope                                                                                                                                                                           swissquote/no-type-outside-scope
   6:14  ✖  Disallowed unit                                                                                                                                                                                                 length-zero-no-unit
  10:1   ✖  Expected ".notAComponent" to match pattern "/^(_)?(?:(?:u|t|(?:i|ha)?s)+-[a-z$]+[a-zA-Z0-9$()]*|(?:[a-z$][a-zA-Z0-9$()]+-)?[A-Z$][a-zA-Z0-9$()]*(__[a-z0-9$][a-zA-Z0-9$()]*)*(--[a-z0-9$][a-zA-Z0-9$()]*)*)$/"  selector-class-pattern
  15:1   ✖  A state must be linked to a component                                                                                                                                                                           swissquote/no-state-without-component
  20:1   ✖  Too many ID selectors in "#no-id", maximum 0                                                                                                                                                                    selector-max-id
  26:5   ⚠  Unexpected union class name with the parent selector (&)                                                                                                                                                        scss/selector-no-union-class-name
  28:13  ✖  Too deep nesting, maximum 2                                                                                                                                                                                     max-nesting-depth
  40:2   ✖  Insert "⏎"                                                                                                                                                                                                      prettier/prettier

✖ 9 problems (8 errors, 1 warning)
  1 error potentially fixable with the "--fix" option.

",
}
`;

exports[`Lints with the command in legacy mode 1`] = `
{
  "status": 2,
  "stdall": "
[__:__:__] Starting Crafty __version__...

css/style.scss
   6:14  ✖  Disallowed unit  length-zero-no-unit
  40:2   ✖  Insert "⏎"       prettier/prettier

✖ 2 problems (2 errors, 0 warnings)
  1 error potentially fixable with the "--fix" option.

",
}
`;

exports[`Lints with the command with custom config 1`] = `
{
  "status": 2,
  "stdall": "
[__:__:__] Starting Crafty __version__...

css/style.scss
   6:14  ✖  Disallowed unit                                                                                                                                                                                                 length-zero-no-unit
  10:1   ✖  Expected ".notAComponent" to match pattern "/^(_)?(?:(?:u|t|(?:i|ha)?s)+-[a-z$]+[a-zA-Z0-9$()]*|(?:[a-z$][a-zA-Z0-9$()]+-)?[A-Z$][a-zA-Z0-9$()]*(__[a-z0-9$][a-zA-Z0-9$()]*)*(--[a-z0-9$][a-zA-Z0-9$()]*)*)$/"  selector-class-pattern
  15:1   ✖  A state must be linked to a component                                                                                                                                                                           swissquote/no-state-without-component
  20:1   ✖  Too many ID selectors in "#no-id", maximum 0                                                                                                                                                                    selector-max-id
  26:5   ⚠  Unexpected union class name with the parent selector (&)                                                                                                                                                        scss/selector-no-union-class-name
  28:13  ✖  Too deep nesting, maximum 2                                                                                                                                                                                     max-nesting-depth
  40:2   ✖  Insert "⏎"                                                                                                                                                                                                      prettier/prettier

✖ 7 problems (6 errors, 1 warning)
  1 error potentially fixable with the "--fix" option.

",
}
`;
